--- a/test/public/test1/index.html
+++ b/test/public/test1/index.html
@@ -8,12 +8,11 @@
   <meta name="description" content="Test WebGL">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/test1/styles.css">
 
 </head>
 
 <body>
-	
 	<div id="display"></div>
   <script src="bundle.js"></script>
   
