First test done

--- a/test/public/index.html
+++ b/test/public/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<a href="/test1">Test 1 : Afficher un cube en camera orthonormée avec des boutons pour tourner autour</a>
 		<a href="/sphere">Test 2 : Sphère</a>
-	  <script src="bundle.js"></script>
+	  <script src="/bundle.js"></script>
 	  
 	</body>
 </html>
