--- a/test/public/test1/index.html
+++ b/test/public/test1/index.html
@@ -14,7 +14,16 @@
 
 <body>
 	<div id="display"></div>
-  <script src="bundle.js"></script>
+
+  <button id="reset">RESET</button>
+  <button id="projection">PERSPECTIVE</button>
+
+	<button id="left">LEFT</button>
+	<button id="up">UP</button>
+	<button id="down">DOWN</button>
+	<button id="right">RIGHT</button>
+
+  <script src="/bundle.js"></script>
   
 </body>
 </html>
