--- a/test/public/index.html
+++ b/test/public/index.html
@@ -13,8 +13,8 @@
 	</head>
 
 	<body>
-		<a href="/test1">Test 1 : Afficher un cube en camera orthonormée avec des boutons pour tourner autour</a>
-		<a href="/sphere">Test 2 : Sphère</a>
+		<a href="/test1">Test 1 : Affichage d'une cube multi-color / Premiers mouvements</a>
+		<a href="/test2">Test 2 : Les lumières</a>
 	  <script src="/bundle.js"></script>
 	  
 	</body>
