--- a/test/public/test2/index.html
+++ b/test/public/test2/index.html
@@ -8,14 +8,14 @@
   <meta name="description" content="Test WebGL">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/test1/styles.css">
 
 </head>
 
 <body>
-	
 	<div id="display"></div>
-  <script src="bundle.js"></script>
+
+  <script src="/bundle.js"></script>
   
 </body>
 </html>
