fix test script bug

--- a/test/public/index.html
+++ b/test/public/index.html
@@ -14,7 +14,8 @@
 
 	<body>
 		<a href="/test1">Test 1 : Affichage d'une cube multi-color / Premiers mouvements</a>
-		<a href="/test2">Test 2 : Les lumières</a>
+		<a href="/test2">Test 2 : Les textures</a>
+		<a href="/test3">Test 3 : Les lumières</a>
 	  <script src="/bundle.js"></script>
 	  
 	</body>
