--- a/test/public/index.html
+++ b/test/public/index.html
@@ -13,9 +13,11 @@
 	</head>
 
 	<body>
-		<a href="/test1">Test 1 : Afficher un cube en camera orthonormée avec des boutons pour tourner autour</a>
-		<a href="/sphere">Test 2 : Sphère</a>
-	  <script src="bundle.js"></script>
-	  
+		<a href="/test1">Test 1 : Affichage d'une cube multi-color / Premiers mouvements</a>
+		<a href="/test2">Test 2 : Les textures + Mirroir</a>
+		<a href="/test3">Test 3 : Transparence</a>
+		<a href="/test4">Test 4 : Lumieres</a>
+		<a href="/test5">Test 5 : Ombres</a>
+		<a href="/test5">Test 6 : Texte</a>
 	</body>
 </html>
