add multiple renderers/scene and multiple scene/program

--- a/test/public/test4/index.html
+++ b/test/public/test4/index.html
@@ -14,7 +14,9 @@
 
 <body>
 	<div id="display"></div>
-
+	<div id="fps">
+		<p id="fpsCounter"></p>
+	</div>
   <script src="/bundle.js"></script>
   
 </body>
