Add Ambient/Directional/Point Light on test5/6

--- a/test/public/index.html
+++ b/test/public/index.html
@@ -18,10 +18,11 @@
 		<a href="/test3">Test 3 : Transparence</a>
 		<a href="/test4">Test 4 : Textes + Fenêtre</a>
 		<a href="/test5">Test 5 : Click Event + CubeMap</a>
-		<a href="/test6">Test 6 : Lumieres + Ombres</a>
-		<a href="/test7">Test 7 : Brouillard</a>
+		<a href="/test6">Test 6 : Lumières ambiantes + directionnelles</a>
+		<a href="/test7">Test 7 : Lumières Point and spot</a>
+		<!--<a href="/test7">Test 7 : Brouillard</a>
 		<a href="/test8">Test 8 : Focale</a>
-		<a href="/test9">Test 9 : Mirroir multiple</a>
+		<a href="/test9">Test 9 : Mirroir multiple</a>-->
 
 	</body>
 </html>
