add normal mode on ShaderBuilder, update test6, add line mode on ShaderBuilder

--- a/test/public/test6/index.html
+++ b/test/public/test6/index.html
@@ -14,6 +14,11 @@
 
 <body>
 	<div id="display"></div>
+	<div id="fps">
+		<p id="fpsCounter">Frame per second : --:--</p>
+    <p>Ceci est du code HTML</p>
+    <button id="switch">SWITCH</button>
+	</div>
   <script src="/bundle.js"></script>
   
 </body>
