--- a/test/public/index.html
+++ b/test/public/index.html
@@ -16,10 +16,11 @@
 		<a href="/test1">Test 1 : Affichage d'une cube multi-color / Premiers mouvements</a>
 		<a href="/test2">Test 2 : Les textures + Mirroir</a>
 		<a href="/test3">Test 3 : Transparence</a>
-		<a href="/test4">Test 4 : Textes + Fenêtre</a>
-		<a href="/test5">Test 5 : Click Event + CubeMap</a>
-		<a href="/test6">Test 6 : Lumières ambiantes + directionnelles</a>
-		<a href="/test7">Test 7 : Lumières Point and spot</a>
+		<a href="/test4">Test 4 : Lumières ambiantes + directionnelles</a>
+		<a href="/test5">Test 5 : Lumières Point and Spot</a>
+		<a href="/test6">Test 6 : Squelette + Mutliple Camera + PickObject + Normal visualisation</a>
+		<a href="/test7">Test 7 : Textes + Fenêtre</a>
+		<a href="/test8">Test 8 : Shadow</a>
 		<!--<a href="/test7">Test 7 : Brouillard</a>
 		<a href="/test8">Test 8 : Focale</a>
 		<a href="/test9">Test 9 : Mirroir multiple</a>-->
