Découverte du bug du changement d'axe de la rotation

--- a/test/public/index.html
+++ b/test/public/index.html
@@ -18,12 +18,12 @@
 		<a href="/test3">Test 3 : Transparence</a>
 		<a href="/test4">Test 4 : Lumières ambiantes + directionnelles</a>
 		<a href="/test5">Test 5 : Lumières Point and Spot</a>
-		<a href="/test6">Test 6 : Squelette + Mutliple Camera + PickObject + Normal visualisation</a>
+		<a href="/test6">Test 6 : Squelette + Mutliple Camera + PickObject + Normal visualisation + ClickEvent</a>
 		<a href="/test7">Test 7 : Textes + Fenêtre</a>
 		<a href="/test8">Test 8 : Shadow</a>
-		<!--<a href="/test7">Test 7 : Brouillard</a>
-		<a href="/test8">Test 8 : Focale</a>
-		<a href="/test9">Test 9 : Mirroir multiple</a>-->
+		<!--<a href="/test9">Test 9 : Brouillard</a>
+		<a href="/test10">Test 10 : Focale + Blur</a>
+		<a href="/test11">Test 11 : Mirroir multiple</a>-->
 
 	</body>
 </html>
