renderer fixed / add Frame Texture / test6 finished

--- a/test/public/index.html
+++ b/test/public/index.html
@@ -19,11 +19,9 @@
 		<a href="/test4">Test 4 : Lumières ambiantes + directionnelles</a>
 		<a href="/test5">Test 5 : Lumières Point and Spot</a>
 		<a href="/test6">Test 6 : Squelette + Mutliple Camera + PickObject + Normal visualisation + ClickEvent</a>
-		<a href="/test7">Test 7 : Textes + Fenêtre</a>
+		<a href="/test7">Test 7 : Click Event</a>
 		<a href="/test8">Test 8 : Shadow</a>
-		<!--<a href="/test9">Test 9 : Brouillard</a>
-		<a href="/test10">Test 10 : Focale + Blur</a>
-		<a href="/test11">Test 11 : Mirroir multiple</a>-->
-
+		<a href="/test9">Test 9 : Mesh Loading</a>
+		<a href="/test10">Test 10 : FOG + Blur</a>
 	</body>
 </html>
